objects/pse__Resource_Request_Set__c.object
<CustomObject>
    <customHelpPage>pse__ResourceRequestSetHelp</customHelpPage>
    <description>Represents one or more resources held against a resource request. When one resource request in a set is assigned, the others are cancelled and the object is updated with a lookup to the resource request that was actually staffed.</description>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account. This is copied from the source resource request.</description>
        <inlineHelpText>Lookup to the account. This is copied from the source resource request.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Resource Request Sets</relationshipLabel>
        <relationshipName>Resource_Request_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Master_Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the resource request to be copied when creating a resource request set.</description>
        <inlineHelpText>Lookup to the resource request to be copied when creating a resource request set.</inlineHelpText>
        <label>Master Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Resource Request Sets (Master Resource Request)</relationshipLabel>
        <relationshipName>Resource_Request_Sets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the opportunity. This is copied from the source resource request.</description>
        <inlineHelpText>Lookup to the opportunity. This is copied from the source resource request.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Resource Request Sets</relationshipLabel>
        <relationshipName>Resource_Request_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the project. This is copied from the source resource request.</description>
        <inlineHelpText>Lookup to the project. This is copied from the source resource request.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Resource Request Sets</relationshipLabel>
        <relationshipName>Resource_Request_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Staffed_On__c</fullName>
        <description>Date and time on which a resource request belonging to the same resource request set was staffed.</description>
        <inlineHelpText>Date and time on which a resource request belonging to the same resource request set was staffed.</inlineHelpText>
        <label>Staffed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Staffed_Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the resource request. This is populated with the final staffed resource request belonging to this resource request set.</description>
        <inlineHelpText>Lookup to the resource request. This is populated with the final staffed resource request belonging to this resource request set.</inlineHelpText>
        <label>Staffed Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Staffed for Resource Request Set</relationshipLabel>
        <relationshipName>Resource_Request_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Resource Request Set</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RR Set-{0000}</displayFormat>
        <label>Resource Request Set  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Request Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
</CustomObject>